--- a/examples.ipynb
+++ b/examples.ipynb
@@ -61,11 +61,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "e24584a0",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "for i in range(2,2):\n",
+    "    print(i)"
+   ]
   }
  ],
  "metadata": {
